SAK-19404 take care of the string literals firt
git-svn-id: https://source.sakaiproject.org/svn/mailarchive/trunk@84227 66ffb92e-73f9-0310-93c1-f5514f145a0a