@@ -175,7 +175,7 @@ public class MailboxAction extends PagedResourceActionII
 			MailArchiveChannel channel = MailArchiveService.getMailArchiveChannel((String) state.getAttribute(STATE_CHANNEL_REF));
 			int cCount = channel.getCount((Filter) getSearchFilter(search, 0, 0));
 
-			lastCount = new Integer(cCount);
+			lastCount = Integer.valueOf(cCount);
 			state.setAttribute(STATE_COUNT, lastCount);
 			state.setAttribute(STATE_COUNT_SEARCH, search);
 			return cCount;
@@ -261,17 +261,17 @@ public class MailboxAction extends PagedResourceActionII
 			
 			if (state.getAttribute(STATE_ASCENDING) == null)
 			{
-				state.setAttribute(STATE_ASCENDING, new Boolean(false));
+				state.setAttribute(STATE_ASCENDING, Boolean.valueOf(false));
 			}
 
 			if (state.getAttribute(STATE_SORT) == null)
 			{
-				state.setAttribute(STATE_SORT, new Integer(SORT_DATE));
+				state.setAttribute(STATE_SORT, Integer.valueOf(SORT_DATE));
 			}
 
 			if (state.getAttribute(STATE_VIEW_HEADERS) == null)
 			{
-				state.setAttribute(STATE_VIEW_HEADERS, new Boolean(false));
+				state.setAttribute(STATE_VIEW_HEADERS, Boolean.valueOf(false));
 			}
 
 		}
@@ -357,10 +357,10 @@ public class MailboxAction extends PagedResourceActionII
 		context.put("viewPos",viewPos);
 
 		context.put("nextPos",nextPos);
-		context.put("goNPButton", new Boolean(goNext));
+		context.put("goNPButton", Boolean.valueOf(goNext));
 
 		context.put("prevPos",prevPos);
-		context.put("goPPButton", new Boolean(goPrev));
+		context.put("goPPButton", Boolean.valueOf(goPrev));
 
 		// prepare the sort of messages
 		context.put("tlang", rb);
@@ -486,7 +486,7 @@ public class MailboxAction extends PagedResourceActionII
 		// Decide if we are going to allow searching...
 		int numMessages = sizeResources(state);
 		int messageLimit = getMessageThreshold();
-		context.put("allow-search",new Boolean(numMessages <= messageLimit));
+		context.put("allow-search",Boolean.valueOf(numMessages <= messageLimit));
 
 		// output the search field
 		context.put(STATE_SEARCH, state.getAttribute(STATE_SEARCH));
@@ -609,7 +609,7 @@ public class MailboxAction extends PagedResourceActionII
 		SessionState state = ((JetspeedRunData) runData).getPortletSessionState(peid);
 
 		// switch to view mode
-		state.setAttribute(STATE_VIEW_HEADERS, new Boolean(true));
+		state.setAttribute(STATE_VIEW_HEADERS, Boolean.valueOf(true));
 
 	} // doView_headers
 
@@ -623,7 +623,7 @@ public class MailboxAction extends PagedResourceActionII
 		SessionState state = ((JetspeedRunData) runData).getPortletSessionState(peid);
 
 		// switch to view mode
-		state.setAttribute(STATE_VIEW_HEADERS, new Boolean(false));
+		state.setAttribute(STATE_VIEW_HEADERS, Boolean.valueOf(false));
 
 	} // doHide_headers
 
@@ -643,13 +643,13 @@ public class MailboxAction extends PagedResourceActionII
 		if (((Integer) state.getAttribute(STATE_SORT)).intValue() == SORT_FROM)
 		{
 			boolean order = !((Boolean) state.getAttribute(STATE_ASCENDING)).booleanValue();
-			state.setAttribute(STATE_ASCENDING, new Boolean(order));
+			state.setAttribute(STATE_ASCENDING, Boolean.valueOf(order));
 		}
 
 		// set state
 		else
 		{
-			state.setAttribute(STATE_SORT, new Integer(SORT_FROM));
+			state.setAttribute(STATE_SORT, Integer.valueOf(SORT_FROM));
 		}
 
 	} // doSort_from
@@ -670,13 +670,13 @@ public class MailboxAction extends PagedResourceActionII
 		if (((Integer) state.getAttribute(STATE_SORT)).intValue() == SORT_DATE)
 		{
 			boolean order = !((Boolean) state.getAttribute(STATE_ASCENDING)).booleanValue();
-			state.setAttribute(STATE_ASCENDING, new Boolean(order));
+			state.setAttribute(STATE_ASCENDING, Boolean.valueOf(order));
 		}
 
 		// set state
 		else
 		{
-			state.setAttribute(STATE_SORT, new Integer(SORT_DATE));
+			state.setAttribute(STATE_SORT, Integer.valueOf(SORT_DATE));
 		}
 
 	} // doSort_date
@@ -697,13 +697,13 @@ public class MailboxAction extends PagedResourceActionII
 		if (((Integer) state.getAttribute(STATE_SORT)).intValue() == SORT_SUBJECT)
 		{
 			boolean order = !((Boolean) state.getAttribute(STATE_ASCENDING)).booleanValue();
-			state.setAttribute(STATE_ASCENDING, new Boolean(order));
+			state.setAttribute(STATE_ASCENDING, Boolean.valueOf(order));
 		}
 
 		// set state
 		else
 		{
-			state.setAttribute(STATE_SORT, new Integer(SORT_SUBJECT));
+			state.setAttribute(STATE_SORT, Integer.valueOf(SORT_SUBJECT));
 		}
 
 	} // doSort_subject
@@ -986,20 +986,20 @@ public class MailboxAction extends PagedResourceActionII
 			{
 				boolean modified = false;
 				// update the channel for open (if changed)
-				boolean ss = new Boolean(open).booleanValue();
+				boolean ss = Boolean.valueOf(open).booleanValue();
 				if (channel.getOpen() != ss)
 				{
 					edit.setOpen(ss);
 					modified = true;
 				}
 				
-				ss = new Boolean(replyToList).booleanValue();
+				ss = Boolean.valueOf(replyToList).booleanValue();
 				if (channel.getReplyToList() != ss)
 				{
 					edit.setReplyToList(ss);
 					modified = true;
 				}
-				ss = new Boolean(sendToList).booleanValue();
+				ss = Boolean.valueOf(sendToList).booleanValue();
 				if (channel.getSendToList() != ss)
 				{
 					edit.setSendToList(ss);
